objects/LAT_Case__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Rationale__c</fullName>
        <inlineHelpText>Informar a justificativa de inadimplência para que seja encaminhada à área responsável.</inlineHelpText>
        <label>Rationale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abatimento de contrato não registrado</fullName>
                </value>
                <value>
                    <fullName>Abatimento parcial de devolução</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
                <value>
                    <fullName>Cliente com verba de contrato a receber</fullName>
                </value>
                <value>
                    <fullName>Condição de pagamento incorreta</fullName>
                </value>
                <value>
                    <fullName>Devolução total sem ADM</fullName>
                </value>
                <value>
                    <fullName>Diferença de preço na NF</fullName>
                </value>
                <value>
                    <fullName>Não recebimento do boleto</fullName>
                </value>
                <value>
                    <fullName>Negociação c/ data prevista pagamento</fullName>
                </value>
                <value>
                    <fullName>Título já pago</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ReasonForDissatisfaction__c</fullName>
        <label>Reason for Dissatisfaction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_ReasonForNotApprovedAnExtension__c</fullName>
        <label>Reason for not approved an extension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_ReasonForNotApprovedText__c</fullName>
        <label>Reason for not approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ReasonForNotApproved__c</fullName>
        <label>Reason for not approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desacordo em relação às contrapartidas</fullName>
                </value>
                <value>
                    <fullName>Desacordo aos Acordos Comerciais definidos</fullName>
                </value>
                <value>
                    <fullName>Existência de estoque no cliente</fullName>
                </value>
                <value>
                    <fullName>Fechamento de contrato com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Oferta não condizente com dívida</fullName>
                </value>
                <value>
                    <fullName>Proposta melhor da concorrência</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Insatisfação com o contrato atual</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação às contrapartidas (informar qual contrapartida)</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação aos Acordos Comerciais estabelecidos</fullName>
                </value>
                <value>
                    <fullName>Valor ou prazo não compatível ao valor em aberto</fullName>
                </value>
                <value>
                    <fullName>Situação de mercado do cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abatimento de contrato não registrado</fullName>
                </value>
                <value>
                    <fullName>Abatimento parcial de devolução</fullName>
                </value>
                <value>
                    <fullName>Alt. Acting format</fullName>
                </value>
                <value>
                    <fullName>Alt. agendamento</fullName>
                </value>
                <value>
                    <fullName>Alt. canal ou subcanal</fullName>
                </value>
                <value>
                    <fullName>Alt. cliente pai</fullName>
                </value>
                <value>
                    <fullName>Alt. condição comercial</fullName>
                </value>
                <value>
                    <fullName>Alt. condição e instrumento de pagamento</fullName>
                </value>
                <value>
                    <fullName>Alt. dados bancários</fullName>
                </value>
                <value>
                    <fullName>Alt. descarga</fullName>
                </value>
                <value>
                    <fullName>Alt. e-mail da NFE</fullName>
                </value>
                <value>
                    <fullName>Alt. endereço faturamento</fullName>
                </value>
                <value>
                    <fullName>Alt. G/L cliente</fullName>
                </value>
                <value>
                    <fullName>Alt. informações de pedidos</fullName>
                </value>
                <value>
                    <fullName>Alt. inscrição estadual</fullName>
                </value>
                <value>
                    <fullName>Alt. janela pedidos</fullName>
                </value>
                <value>
                    <fullName>Alt. limite de crédito</fullName>
                </value>
                <value>
                    <fullName>Alt. nome fantasia</fullName>
                </value>
                <value>
                    <fullName>Alt. paletização especial</fullName>
                </value>
                <value>
                    <fullName>Alt. prioridade faturamento</fullName>
                </value>
                <value>
                    <fullName>Alt. processo EDI</fullName>
                </value>
                <value>
                    <fullName>Alt. razão social</fullName>
                </value>
                <value>
                    <fullName>Alt. recebimento carga</fullName>
                </value>
                <value>
                    <fullName>Alt. tipo cliente</fullName>
                </value>
                <value>
                    <fullName>Alt. tipo de canal</fullName>
                </value>
                <value>
                    <fullName>Alt. tipo de veículo</fullName>
                </value>
                <value>
                    <fullName>Alt. transportadora</fullName>
                </value>
                <value>
                    <fullName>Alt. unidade de negócio</fullName>
                </value>
                <value>
                    <fullName>Análise/complementação de dados</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_RegionalManagerKAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente regional / KAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RegistrationTimeDays__c</fullName>
        <formula>LAT_ClosedDate__c - CreatedDate</formula>
        <label>Registration Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_RenewalProposalFormula__c</fullName>
        <formula>HYPERLINK(LAT_Parent__r.LAT_RenewalProposal__r.Id, LAT_Parent__r.LAT_Contract__c )</formula>
        <label>Renewal Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RenewalProposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Proposal</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipName>LAT_Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RevenueAddress__c</fullName>
        <formula>LAT_Account__r.Revenue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End de Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RevenueCity__c</fullName>
        <formula>LAT_Account__r.Revenue_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cidade Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RevenueNeighbourhood__c</fullName>
        <formula>LAT_Account__r.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bairro Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RevenueNumber__c</fullName>
        <formula>LAT_Account__r.Revenue_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RevenuePostalCode__c</fullName>
        <formula>LAT_Account__r.Revenue_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_RevenueUF__c</fullName>
        <formula>LAT_Account__r.Revenue_UF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UF Fatura</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SendSecuritiesRegistry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send securities registry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_SignatureOfTerminationDateCustomer__c</fullName>
        <label>Signature of termination Date - Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_SigningNote__c</fullName>
        <label>Note Signatories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>SocialPost</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acordo aprovado</fullName>
                </value>
                <value>
                    <fullName>Acordo rejeitado</fullName>
                </value>
                <value>
                    <fullName>Análise pendente</fullName>
                </value>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Cancelamento aprovado pelo cliente</fullName>
                </value>
                <value>
                    <fullName>Cancelamento encaminhado ao coordenador</fullName>
                </value>
                <value>
                    <fullName>Cancelamento encaminhado ao gerente</fullName>
                </value>
                <value>
                    <fullName>Cancelamento encaminhado ao Jurídico</fullName>
                </value>
                <value>
                    <fullName>Carta de não renovação entregue</fullName>
                </value>
                <value>
                    <fullName>Cláusulas encaminhadas para o gerente</fullName>
                </value>
                <value>
                    <fullName>Contrato não renovado</fullName>
                </value>
                <value>
                    <fullName>Contrato prorrogado</fullName>
                </value>
                <value>
                    <fullName>Distrato assinado encaminhado regional</fullName>
                </value>
                <value>
                    <fullName>Distrato encaminhado p/ diretor</fullName>
                </value>
                <value>
                    <fullName>Distrato encaminhado p/ o consultor</fullName>
                </value>
                <value>
                    <fullName>Distrato encaminhado para o coordenador</fullName>
                </value>
                <value>
                    <fullName>Distrato encaminhado para o gerente</fullName>
                </value>
                <value>
                    <fullName>Distrato entregue p/ assinatura cliente</fullName>
                </value>
                <value>
                    <fullName>Distrato entregue para o cliente</fullName>
                </value>
                <value>
                    <fullName>Doc. de prorrogação entregue ao cliente</fullName>
                </value>
                <value>
                    <fullName>Em análise - Controladoria</fullName>
                </value>
                <value>
                    <fullName>Em análise - Crédito e cobrança</fullName>
                </value>
                <value>
                    <fullName>Em análise - Customer Service</fullName>
                </value>
                <value>
                    <fullName>Em análise - Planejamento Comercial</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Em aprovação</fullName>
                </value>
                <value>
                    <fullName>Em aprovação - Comercial</fullName>
                </value>
                <value>
                    <fullName>Em aprovação - Crédito e Cobrança</fullName>
                </value>
                <value>
                    <fullName>Em aprovação - Financeiro</fullName>
                </value>
                <value>
                    <fullName>Em aprovação - Vendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SuppliedCompany__c</fullName>
        <label>Web Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SuppliedEmail__c</fullName>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LAT_SuppliedName__c</fullName>
        <label>Web Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_SuppliedPhone__c</fullName>
        <label>Web Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_System__c</fullName>
        <formula>IF ( ISPICKVAL( LAT_AmountType__c , &quot;Allowance&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( LAT_AmountType__c , &quot;KA - Verba preço promocionado&quot;) , &quot;SCV&quot; 
,IF ( ISPICKVAL( LAT_AmountType__c , &quot;KA Contratos&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( LAT_AmountType__c ,  &quot;On trade - Verba venda direta&quot;), &quot;SCV&quot; 
,IF ( ISPICKVAL( LAT_AmountType__c ,  &quot;Bonificação&quot;), &quot;SCV&quot; ,  &quot;ME&quot;)))))</formula>
        <label>System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationCompanySignatory2__c</fullName>
        <label>Termination Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationCompanySignatory__c</fullName>
        <label>Termination Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationCustomerSignatory2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination Customer Signatory</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LAT_Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationCustomerSignatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination Customer Signatory</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LAT_Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationDeliveredPSubscribeClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination delivered subscribe client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationFiledByRegional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination filed by regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationSignedByTheBoard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationSignedByTheCoordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationSignedByTheCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TerminationSignedByTheManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination signed by the manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TotalValue__c</fullName>
        <formula>LAT_GroupingFiscalYear__r.valor_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alteração - Cadastro de cliente</fullName>
                </value>
                <value>
                    <fullName>Cadastro de clientes</fullName>
                </value>
                <value>
                    <fullName>Cancelamento de contrato</fullName>
                </value>
                <value>
                    <fullName>Inadimplência</fullName>
                </value>
                <value>
                    <fullName>Justificativa de inadimplência</fullName>
                </value>
                <value>
                    <fullName>Pergunta</fullName>
                </value>
                <value>
                    <fullName>Problema</fullName>
                </value>
                <value>
                    <fullName>Proposta de pagamento</fullName>
                </value>
                <value>
                    <fullName>Proposta não realizada</fullName>
                </value>
                <value>
                    <fullName>Solicitação de recurso</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                    <default>true</default>
                    <label>Technical Issue</label>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Request Feature</fullName>
                </value>
                <value>
                    <fullName>Connection Issue</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Technical Issue - Advanced</fullName>
                </value>
                <value>
                    <fullName>Balance Inquiry</fullName>
                </value>
                <value>
                    <fullName>Billing Dispute</fullName>
                </value>
                <value>
                    <fullName>Bill Reprint - Email</fullName>
                </value>
                <value>
                    <fullName>Bill Reprint - Paper</fullName>
                </value>
                <value>
                    <fullName>Account Alteration ARG</fullName>
                </value>
                <value>
                    <fullName>Account Alteration URU</fullName>
                </value>
                <value>
                    <fullName>Overdue to attorneys</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Credits and Collections</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ValueDue__c</fullName>
        <label>Value due</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_Verification__c</fullName>
        <label>Verification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_WFType__c</fullName>
        <label>WF Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Case</label>
    <listViews>
        <fullName>AR_Casos_Abiertos_Modif_Clientes</fullName>
        <columns>NAME</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Case__c.CSE_1_AccountAlteration_ARG</value>
        </filters>
        <label>AR Casos Abiertos Modif. Clientes</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_de_Administraci_n_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Director_de_Ventas_Canal_Directo</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_Trade_Marketing</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Administracion_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Ventas_SPM_e_Interior</roleAndSubordinates>
            <roleAndSubordinates>AR_Inteligencia_Comercial</roleAndSubordinates>
            <roleAndSubordinates>AR_Logistica</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Casos_Cerrados_Modif_Clientes</fullName>
        <columns>NAME</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_ClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Case__c.CSE_1_AccountAlteration_ARG</value>
        </filters>
        <label>AR Casos Cerrados Modif. Clientes</label>
        <language>es</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_de_Administraci_n_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Director_de_Ventas_Canal_Directo</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_Trade_Marketing</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Administracion_y_Finanzas</roleAndSubordinates>
            <roleAndSubordinates>AR_Gerente_de_Ventas_SPM_e_Interior</roleAndSubordinates>
            <roleAndSubordinates>AR_Inteligencia_Comercial</roleAndSubordinates>
            <roleAndSubordinates>AR_Logistica</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Administracao_de_Vendas_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Administração de Vendas</label>
        <queue>Administracao_de_Vendas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>NAME</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>LAT_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Todas Demandas Abertas</label>
    </listViews>
    <listViews>
        <fullName>Controladoria_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Controladoria</label>
        <queue>Controladoria</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreditAndCollections_AR_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit and Collections AR</label>
        <queue>CreditAndCollections_AR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CreditAndCollections_UY_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit and Collections UY</label>
        <queue>CreditAndCollections_UY</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <filterScope>Queue</filterScope>
        <label>Credito e Cobranca Todos</label>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_Fechados</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Credito e Cobranca Fechados</label>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_Cobranca_Pendentes</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <columns>LAT_RevenueUF__c</columns>
        <columns>LAT_FinancialApproval__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Credito e Cobranca Pendentes</label>
        <language>pt_BR</language>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <group>Credito_e_cobran_a</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credito_e_Cobranca_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Crédito e Cobrança</label>
        <queue>Credito_e_Cobranca</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <columns>LAT_Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LAT_Status__c</field>
            <operation>equals</operation>
            <value>,Em análise - Customer Service,Análise pendente</value>
        </filters>
        <label>Customer Service Pendente</label>
        <language>en_US</language>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <filterScope>Queue</filterScope>
        <label>Customer Service Todos</label>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Finalizado</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAT_Type__c</columns>
        <columns>LAT_Reason__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Subject__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAT_Manager__c</columns>
        <columns>LAT_AreaManager__c</columns>
        <columns>LAT_RegionalManager__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LAT_IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Customer Service Finalizado</label>
        <queue>Customer_service</queue>
        <sharedTo>
            <group>Customer_service</group>
            <role>Administracao_de_Vendas</role>
            <role>Global</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_service_LAT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer service</label>
        <queue>Customer_service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Demanda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <recordTypes>
        <fullName>Alteracao_cadastro_de_clientes</fullName>
        <active>true</active>
        <description>Permite abrir solicitações de alteração de dados cadastrais de clientes</description>
        <label>Alteração de cadastro de clientes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alteracao_rota_de_promotor</fullName>
        <active>true</active>
        <description>Permite abrir solicitações de alteração de rotas para promotores</description>
        <label>Alteração  de rota de promotor</label>
    </recordTypes>
</CustomObject>